--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,6 @@ Primary Dark #00600f
 }
 
 #maincard #cardtop #cardtopimg {
-    background-image: url(res/HomeBackground.png);
     background-size: cover;
     background-position-y: 20%;
 
@@ -91,6 +90,7 @@ Primary Dark #00600f
 #maincard #cardtop #cardtopimg > img {
     border-radius: 10px 10px 0 0;
     max-width: 100%;
+    visibility: hidden;
 }
 
 #maincard #cardtop .textdiv {
